--- a/src/input.css
+++ b/src/input.css
@@ -3,51 +3,59 @@
 @tailwind utilities;
 
 
-  html, body, div, span, a {
+html,
+body,
+div,
+span,
+a {
 
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    font-family:"Source Sans 3";
-    font-weight: 400;
-    scroll-behavior:smooth!important;
-    scroll-margin-top:-1rem;
-    font-family: "Source Sans 3", serif;
-    * {
-      box-sizing: border-box!important;
-   
-    }
-   
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: "Source Sans 3";
+  font-weight: 400;
+  scroll-behavior: smooth !important;
+  /* fixed scroll to top with gap (-1rem is previous value) */
+  scroll-margin-top: 0rem;
+  font-family: "Source Sans 3", serif;
+
+  * {
+    box-sizing: border-box !important;
+
   }
-  
-html body{
+
+}
+
+html body {
   max-width: 100%;
-    /* overflow-x: hidden!important; */
-    overflow-y: auto!important;
-    /* color:#2D243A; */
-    
+  /* overflow-x: hidden!important; */
+  overflow-y: auto !important;
+  /* color:#2D243A; */
+
 }
 
 .menu-icon {
- 
+
   transition: transform 0.3s ease-in-out;
-   /* Add a transition */
+  /* Add a transition */
 }
 
 .menu-icon.openly {
-  transform: rotate(90deg); /* Rotate when open */
+  transform: rotate(90deg);
+  /* Rotate when open */
 }
 
 .small-menu {
   transition: all 500ms ease-in-out;
-  
- /* transition: transform 0.1s cubic-bezier(0.075, 0.82, 0.165, 1); /* Add a transition */
+
+  /* transition: transform 0.1s cubic-bezier(0.075, 0.82, 0.165, 1); /* Add a transition */
 }
-.small-menu.slide-left{
-   
-    -webkit-animation: slide-left 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
-            animation: slide-left 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
-  
+
+.small-menu.slide-left {
+
+  -webkit-animation: slide-left 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+  animation: slide-left 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+
 }
 
 /* ----------------------------------------------
@@ -62,77 +70,91 @@ html body{
  * animation slide-left
  * ----------------------------------------
  */
- @-webkit-keyframes slide-left {
+@-webkit-keyframes slide-left {
   0% {
     -webkit-transform: translateX(100vw);
-            transform: translateX(100vw);
+    transform: translateX(100vw);
   }
+
   100% {
     -webkit-transform: translateX(0);
-            transform: translateX(0);
+    transform: translateX(0);
   }
 }
+
 @keyframes slide-left {
   0% {
     -webkit-transform: translateX(100vw);
-            transform: translateX(100vw);
+    transform: translateX(100vw);
   }
+
   100% {
     -webkit-transform: translateX(0);
-            transform: translateX(0);
+    transform: translateX(0);
   }
 }
 
 @-webkit-keyframes slide-close {
   100% {
     -webkit-transform: translateX(100vw);
-            transform: translateX(100vw);
+    transform: translateX(100vw);
   }
+
   0% {
     -webkit-transform: translateX(0);
-            transform: translateX(0);
+    transform: translateX(0);
   }
 }
+
 @keyframes slide-close {
   100% {
     -webkit-transform: translateX(100vw);
-            transform: translateX(100vw);
+    transform: translateX(100vw);
   }
+
   0% {
     -webkit-transform: translateX(0);
-            transform: translateX(0);
+    transform: translateX(0);
   }
 }
 
-.hidden.slide-close{
+.hidden.slide-close {
   -webkit-animation: slide-close 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
-            animation: slide-close 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+  animation: slide-close 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
 }
 
-#small-menu-list{
+#small-menu-list {
   overflow: hidden;
   transition: max-width 500ms cubic-bezier(0.785, 0.135, 0.15, 0.86)
 }
 
 
 
-.close{
- 
-  max-width:0vw;
-}
-.open{
+.close {
 
-max-width:100vw;
+  max-width: 0vw;
 }
-.active{
-  color:rgb(104, 33, 226)!important;
+
+.open {
+
+  max-width: 100vw;
+}
+
+.active {
+  color: rgb(104, 33, 226) !important;
   text-shadow: 4px 4px 15px rgba(221, 216, 249, 0.28);
   transition-property: all;
-transition-timing-function: ease-in-out;
-transition-duration: 150ms;
-/* font-weight: 600; */
+  transition-timing-function: ease-in-out;
+  transition-duration: 150ms;
+  /* font-weight: 600; */
 }
-.nav-link{
+
+.nav-link {
   /* text-shadow: 1px 0.5px 3px rgba(255, 255, 255, 0.3); */
- 
+
+}
+
+
+.calculated-height {
+  height: calc(var(--vh, 1vh) * 100);
 }
